basic styling done todo: -some kind of invisible bug -touch feature

--- a/2048/styles/body.css
+++ b/2048/styles/body.css
@@ -9,4 +9,5 @@ body {
     width: 100vw;
     justify-content: center;
     align-items: center;
+    background-color: #f1ece7;
 }
