--- a/2048/styles/game.css
+++ b/2048/styles/game.css
@@ -7,15 +7,16 @@
     position: relative;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
+    border-radius: 4px;
     gap: var(--gap-width);
     padding: var(--gap-width);
-    background-color: gray;
+    background-color: #bbada0;
 }
 
 .background-cell {
     aspect-ratio: 1;
     border-radius: 5px;
-    background-color: rgb(241, 236, 255);
+    background-color: #ccc0b3;
     position: relative;
 }
 
@@ -26,7 +27,6 @@
     left: 0%;
     height: 100%;
     width: 100%;
-    background-color: rgba(138, 138, 255, 0.3);
 }
 
 .cell {
